--- a/sites/configurations/digitalparticipation/templates/privacy.hbs
+++ b/sites/configurations/digitalparticipation/templates/privacy.hbs
@@ -4,7 +4,7 @@
       <h1>Privacy policy</h1>
       <h4>Who we are</h4>
       <p>
-        The Scotland Declaration on Human Rights is operated by the Scottish Council for Voluntary Organisations (SCVO). SCVO is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+        Scotland's Digital Participation Charter is operated by the Scottish Council for Voluntary Organisations (SCVO). SCVO is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
       </p>
       <p>
         We are committed to respecting and protecting your privacy. This policy explains how we do this. Please also read the <a href="/terms">terms and conditions</a>.
