Change privacy & cookies links

--- a/sites/configurations/digitalparticipation/layouts/default.hbs
+++ b/sites/configurations/digitalparticipation/layouts/default.hbs
@@ -120,10 +120,10 @@
                       <a href="/accessibility">Accessibility</a>
                     </li>
                     <li class="mdc-list-item">
-                      <a href="/privacy">Privacy policy</a>
+                      <a href="/privacy">Privacy</a>
                     </li>
                     <li class="mdc-list-item">
-                      <a href="/cookies">Cookies policy</a>
+                      <a href="/cookies">Cookies</a>
                     </li>
                     <li class="mdc-list-item">
                       <a href="/terms">Terms &amp; conditions</a>
