--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -66,6 +66,9 @@ console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/s
 console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Menus:', {{{regexReplace (regexReplace (stringify @root.context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+{{#if errors.[0]}}
+  console.error('Task Errors:', {{{regexReplace (regexReplace (stringify errors) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+{{/if}}
 {{/ifAny ~}}
 </script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
@@ -77,6 +80,13 @@ if(location.host.indexOf('.local') > -1){
 </script>
 </head>
 <body class="mdc-theme--site-bg {{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
+  {{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
+    {{#if errors.[0]}}
+      <div style="position:fixed;top:0;right:0;padding:5px;background-color:#ff0000;color:#ffffff;">
+        Route Task Errors (F12)
+      </div>
+    {{/if}}
+  {{/ifAny}}
   <goodmoves-site>
     <div class="mdc-typography">
       <header class="mdc-top-app-bar mdc-elevation--z5 top-bar-stuck" id="top-bar">
