--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -1,4 +1,4 @@
-{{{rendered.vacancy_status}}}
+{{>vacancy_status}}
 <div class="mdc-card__info--vacancy-row">
   <div class="mdc-card__info--vacancy">
     <h2 class="mdc-card__info--vacancy-title mdc-typography--headline5">
