--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -23,7 +23,7 @@
   <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/assets/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#00838f">
   <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="https://storage.googleapis.com/scvo-assets/assets/opensearch.xml" />
-  <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css">
+  <!-- <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css"> -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="/assets/css/getinvolved-styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-4"></script>
