--- a/sites/configurations/digitalparticipation/layouts/default.hbs
+++ b/sites/configurations/digitalparticipation/layouts/default.hbs
@@ -22,7 +22,7 @@
   <meta name="msapplication-TileColor" content="#00838f">
   <meta name="msapplication-TileImage" content="https://storage.googleapis.com/digitalparticipation/images/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#00838f">
-  <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css">
+  <!-- <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css"> -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="/assets/css/digitalparticipation-styles.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
