--- a/sites/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map.hbs
@@ -9,12 +9,12 @@
     {{/ifAll ~}}
   }'></div>
 </div>
-{{#each @root.data.search_data.map_results.hits.hits}}
-  {{#if _source.geo_vacancy_coords}}
-    {{#each (arrayify _source.geo_vacancy_coords)}}
+{{#each @root.data.search_data.map_results.hits.hits ~}}
+  {{#if _source.geo_vacancy_coords ~}}
+    {{#each (arrayify _source.geo_vacancy_coords) ~}}
       <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-shortlisted="{{#each @root.data.shortlist.items}}{{#compare id "===" ../../_source.Id}}true{{/compare}}{{/each}}" data-homebased="{{#if ../_source.home_based}}true{{/if}}" data-title="{{../_source.title}}">
         {{>vacancy_map ../_source}}
       </marker>
-    {{/each}}
-  {{/if}}
-{{/each}}
+    {{/each ~}}
+  {{/if ~}}
+{{/each ~}}
