--- a/sites/configurations/humanrightsdeclaration/layouts/default.hbs
+++ b/sites/configurations/humanrightsdeclaration/layouts/default.hbs
@@ -22,7 +22,7 @@
   <meta name="msapplication-TileColor" content="#5C96DD">
   <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/humanrights/ms-icon-144x144.png">
   <meta name="theme-color" content="#5C96DD">
-  <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css">
+  <!-- <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css"> -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="/assets/css/humanrightsdeclaration-styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-28"></script>
