CJS location search

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -200,9 +200,6 @@ primary-dark: #263238
   $themeFunding: map-get($colours, 'funding');
 
   a,
-  .leaflet-container a,
-  .vacancy_icon .marker-icon,
-  .map-marker-overlay,
   #share-menu-button,
   .mdc-simple-menu .mdc-list-item,
   .social .fa-fw,
@@ -519,6 +516,11 @@ primary-dark: #263238
       background-color: white !important;
       color: map-get($themeJobs, 'primary') !important;
     }
+  }
+  .leaflet-container a,
+  .vacancy_icon .marker-icon,
+  .map-marker-overlay {
+    color: map-get($themeJobs, 'primary') !important;
   }
   .community-jobs-scotland .callout-image .caption {
     background-color: rgba(255,255,255,0.5);
