CJS location improvements

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3652,6 +3652,15 @@ p:last-child {
 }
 .page-sidebar form {
   margin-bottom: $unit;
+  .mdc-select {
+    background-image: none;
+  }
+  .search-distance {
+    font-variant: all-small-caps;
+    // font-size: 0.9rem;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.7);
+  }
 }
 .post-sidebar {
   margin-top: $unit/2;
