--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -36,38 +36,36 @@
     <label class="mdc-floating-label" for="q">Keywords</label>
   </div>
 
-  <div class="h-padding">
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-            <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
-            <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth search-location" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
-              {
-                "types": ["(regions)"],
-                "componentRestrictions": {
-                  "country": "gb"
-                }
-              }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
-            <label class="mdc-floating-label" for="location">
-              Location
-            </label>
-            <div class="mdc-line-ripple"></div>
-          </div>
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
+          <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth search-location" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
+            {
+              "types": ["(regions)"],
+              "componentRestrictions": {
+                "country": "gb"
+              }
+            }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
+          <label class="mdc-floating-label" for="location">
+            Location
+          </label>
+          <div class="mdc-line-ripple"></div>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
-            <select data-location="location" class="mdc-select__native-control search-distance" id="distance" name="distance">
-              <option value="8.04672"{{#compare @root.request.params.query.distance "8.04672"}} selected{{/compare}}>5 miles</option>
-              <option value="16.09344"{{#compare @root.request.params.query.distance "16.09344"}} selected{{/compare}}>10 miles</option>
-              <option value="40.2336"{{#compare @root.request.params.query.distance "40.2336"}} selected{{/compare}}>25 miles</option>
-              <option value="80.4672"{{#compare @root.request.params.query.distance "80.4672"}} selected{{/compare}}>50 miles</option>
-              <option value=""{{#compare @root.request.params.query.distance ""}} selected{{/compare}}>no limit</option>
-            </select>
-            <label class="mdc-floating-label" for="distance">
-              Within
-            </label>
-          </div>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+          <select data-location="location" class="mdc-select__native-control search-distance" id="distance" name="distance">
+            <option value="8.04672"{{#compare @root.request.params.query.distance "8.04672"}} selected{{/compare}}>5 miles</option>
+            <option value="16.09344"{{#compare @root.request.params.query.distance "16.09344"}} selected{{/compare}}>10 miles</option>
+            <option value="40.2336"{{#compare @root.request.params.query.distance "40.2336"}} selected{{/compare}}>25 miles</option>
+            <option value="80.4672"{{#compare @root.request.params.query.distance "80.4672"}} selected{{/compare}}>50 miles</option>
+            <option value=""{{#compare @root.request.params.query.distance ""}} selected{{/compare}}>no limit</option>
+          </select>
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">
+            Within
+          </label>
         </div>
       </div>
     </div>
@@ -176,7 +174,7 @@
     </select>
     <label class="mdc-floating-label mdc-floating-label--float-above" for="region">Region</label>
   </div>
-  <button class="mdc-button mdc-button--raised" type="submit">
+  <button class="mdc-button mdc-button--raised v-margin" type="submit">
     Search jobs
   </button>
 </form>
