--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
@@ -94,7 +94,7 @@
             <div class="mdc-layout-grid cjs-search-list">
               <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                  <h2>Jobs by sector</h2>
+                  <h2>Sectors</h2>
                   <div class="list-sector">
                     <ul class="mdc-list">
                       {{#each @root.data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
@@ -143,7 +143,7 @@
                   </div>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                  <h2>Jobs by region</h2>
+                  <h2>Regions</h2>
                   <div class="list-region">
                     <ul class="mdc-list">
                       {{#each @root.data.supplimentaryResponses.types.aggregations.regions_slugs.buckets ~}}
