CJS location improvements

--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -75,6 +75,7 @@
                 <label class="mdc-floating-label" for="{{instance_id}}-distance">
                   Within
                 </label>
+                <div class="mdc-line-ripple"></div>
               </div>
             </div>
           </div>
