--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2963,6 +2963,9 @@ table.membership-fees {
     }
   }
 }
+.map-content {
+  padding: 0 $unit/2;
+}
 .popup-pager .map-content:not(:first-child) {
   display: none;
 }
