--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -34,6 +34,7 @@
     <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
     <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" name="q" id="keywords" data-lpignore="true" placeholder="" value="{{@root.request.params.query.q}}">
     <label class="mdc-floating-label" for="q">Keywords</label>
+    <div class="mdc-line-ripple"></div>
   </div>
 
   <div class="mdc-layout-grid">
@@ -61,11 +62,12 @@
             <option value="16.09344"{{#compare @root.request.params.query.distance "16.09344"}} selected{{/compare}}>10 miles</option>
             <option value="40.2336"{{#compare @root.request.params.query.distance "40.2336"}} selected{{/compare}}>25 miles</option>
             <option value="80.4672"{{#compare @root.request.params.query.distance "80.4672"}} selected{{/compare}}>50 miles</option>
-            <option value=""{{#compare @root.request.params.query.distance ""}} selected{{/compare}}>no limit</option>
+            <option value="1609.34"{{#compare @root.request.params.query.distance ""}} selected{{/compare}}>no limit</option>
           </select>
           <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">
             Within
           </label>
+          <div class="mdc-line-ripple"></div>
         </div>
       </div>
     </div>
@@ -77,8 +79,9 @@
 
   <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
     <span class="far fa-hashtag mdc-text-field__icon" tabindex="0" role="button"></span>
-    <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" name="job_number" id="job_number" data-lpignore="true" placeholder="" value="{{@root.request.params.query.job_number}}">
+    <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" name="job_number" id="job_number" data-lpignore="true" value="{{@root.request.params.query.job_number}}">
     <label class="mdc-floating-label" for="job_number">Job number</label>
+    <div class="mdc-line-ripple"></div>
   </div>
 
   <div class="mdc-form-field mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
@@ -126,6 +129,7 @@
       <option value="youth-work"{{#compare @root.request.params.query.sector "===" "youth-work"}} selected{{/compare}}>Youth Work</option> -->
     </select>
     <label class="mdc-floating-label mdc-floating-label--float-above" for="sector">Sector</label>
+    <div class="mdc-line-ripple"></div>
   </div>
 
   <!-- <div class="mdc-textfield mdc-textfield--upgraded">
@@ -173,6 +177,7 @@
       <option value="west-lothian"{{#compare @root.request.params.query.region "===" "west-lothian"}} selected{{/compare}}>West Lothian</option> -->
     </select>
     <label class="mdc-floating-label mdc-floating-label--float-above" for="region">Region</label>
+    <div class="mdc-line-ripple"></div>
   </div>
   <button class="mdc-button mdc-button--raised v-margin" type="submit">
     Search jobs
