Alterations based on Richard's comments

--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -17,6 +17,8 @@
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
+      {{#if home_based ~}}
+      {{else}}
       {{#if distance ~}}
       <ul class="fa-ul mdc-card__action">
         <li class="mdc-card__info--search-distance mdc-typography--body2">
@@ -32,6 +34,7 @@
           {{/compare ~}}
         </li>
       </ul>
+      {{/if ~}}
       {{/if ~}}
       {{/ifAll ~}}
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
