--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -163,6 +163,10 @@
                 {{/if ~}}
               {{/each ~}}
             {{/each ~}}
+            {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
+              <h3 class="mdc-typography--headline7">Other</h3>
+            {{/compare ~}}
+            {{> term_checkbox slug="home_based" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
           {{else}}
             {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
               {{#if key ~}}
