CJS styling and new application form

--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-apply.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-apply.hbs
@@ -60,6 +60,16 @@
 
           <h3>Application forms</h3>
           <ul class="mdc-list downloads">
+            {{#compare job_number "===" "8495" ~}}
+            <li class="mdc-list-item">
+              <span class="mdc-list-item__graphic far fa-file fa-file-word" aria-hidden="true"></span>
+              <span class="mdc-list-item__text">
+                <a href="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/cjs/Application%20form%20%20Fundraising%20and%20Events%20worker%20_.doc" target="_blank">
+                  <span class="title">Application Form</span>
+                </a>
+              </span>
+            </li>
+            {{else}}
             {{#compare job_number "===" "8552" ~}}
             <li class="mdc-list-item">
               <span class="mdc-list-item__graphic far fa-file fa-file-word" aria-hidden="true"></span>
@@ -104,6 +114,7 @@
                 </a>
               </span>
             </li>
+            {{/compare ~}}
             {{/compare ~}}
             {{/compare ~}}
             {{#compare @root.request.params.phase "===" "p19v" ~}}
