--- a/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
+++ b/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
@@ -8,7 +8,10 @@
           <div class="mdc-card goodmoves-brand v-margin">
             <section class="mdc-card__media"><a href="https://goodmoves.com">&nbsp;</a></section>
             <section class="mdc-card__supporting-text">
-              <h3>Find a job in the third sector</h3>
+              <h3>
+                Find a job in the third sector&ensp;
+                <span class="mdc-typography--body2"><a href="/jobs/search">Browse</a></span>
+              </h3>
               <form action="/jobs/search" method="GET" [searchroute]="'goodmoves_job_search'" class="search_form" data-auto-search="true">
                 <div class="mdc-textfield mdc-textfield--upgraded">
                   <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
