Jobs map on landing page

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -537,9 +537,14 @@ primary-dark: #263238
       color: map-get($themeJobs, 'primary') !important;
     }
   }
-  .leaflet-container a,
-  .vacancy_icon .marker-icon,
-  .map-marker-overlay {
+  .jobs .leaflet-container a,
+  .vacancy_icon .marker-icon-goodmoves-vacancy,
+  .vacancy_icon .marker-icon-goodmoves-vacancy .map-marker-overlay {
+    color: map-get($themeJobs, 'primary') !important;
+  }
+  .jobs.community-jobs-scotland .leaflet-container a,
+  .vacancy_icon .marker-icon-cjs-vacancy,
+  .vacancy_icon .marker-icon-cjs-vacancy .map-marker-overlay {
     color: map-get($themeCJS, 'primary') !important;
   }
   .community-jobs-scotland .callout-image .caption {
