--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
@@ -46,7 +46,7 @@
               {{#each @root.data.primaryResponse.hits.hits ~}}
                 {{#if _source.geo_vacancy_coords ~}}
                   {{#each (arrayify _source.geo_vacancy_coords) ~}}
-                    <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../_source.title}}">
+                    <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../_source.title}}" data-type="{{../_type}}">
                       {{#with ../_source ~}}
                       <div class="map-content">
                         <h3 class="mdc-typography--headline6">
