--- a/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
+++ b/sites/configurations/scvo/templates/pages/page-jobs-landing.hbs
@@ -51,6 +51,47 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone top-jobs content page-content">
+          <div id="detailed-results-container" class="container-content container-map">
+            <div id="map-full" data-map-name="fullMap" data-map-options='{
+              {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
+              "circle": {
+                "lat": {{@root.request.params.query.lat}},
+                "lng": {{@root.request.params.query.lng}},
+                "radius": {{default @root.request.params.query.distance 0}}
+              }
+              {{/ifAll ~}}
+            }'></div>
+          </div>
+          {{#each @root.data.supplimentaryResponses.all_vacancies.hits.hits ~}}
+            {{#if _source.geo_vacancy_coords ~}}
+              {{#each (arrayify _source.geo_vacancy_coords) ~}}
+                <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../_source.title}}" data-type="{{../_type}}">
+                  {{#with ../_source ~}}
+                  <div class="map-content">
+                    <h3 class="mdc-typography--headline6">
+                      <a href="{{@root.request.url.pathname}}/{{slug}}{{@root.request.url.search}}">{{title}}</a>
+                    </h3>
+                    {{#if organisation.name ~}}
+                    <div class="mdc-typography--body1 v-margin">
+                      {{organisation.name}}
+                    </div>
+                    {{/if ~}}
+                    <div class="mdc-typography--body2">
+                      <a href="{{@root.request.url.pathname}}/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
+                    </div>
+                  </div>
+                  {{/with ~}}
+                </marker>
+              {{/each ~}}
+            {{/if ~}}
+          {{/each ~}}
+          <script src="/assets/js/scvo/all-vacancies.js"></script>
+        </div>
+      </div>
+    </div>
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone top-jobs content page-content">
           <h2>Top jobs on <strong>good</strong>moves</h2>
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
