--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -538,13 +538,15 @@ primary-dark: #263238
     }
   }
   .jobs .leaflet-container a,
+  .leaflet-popup-content .map-content-goodmoves-vacancy a,
   .vacancy_icon .marker-icon-goodmoves-vacancy,
-  .vacancy_icon .marker-icon-goodmoves-vacancy .map-marker-overlay {
+  .vacancy_icon .map-marker-overlay-goodmoves-vacancy {
     color: map-get($themeJobs, 'primary') !important;
   }
   .jobs.community-jobs-scotland .leaflet-container a,
+  .leaflet-popup-content .map-content-cjs-vacancy a,
   .vacancy_icon .marker-icon-cjs-vacancy,
-  .vacancy_icon .marker-icon-cjs-vacancy .map-marker-overlay {
+  .vacancy_icon .map-marker-overlay-cjs-vacancy {
     color: map-get($themeCJS, 'primary') !important;
   }
   .community-jobs-scotland .callout-image .caption {
