Updated charter images

--- a/sites/configurations/digitalparticipation/templates/skill-up-detail.hbs
+++ b/sites/configurations/digitalparticipation/templates/skill-up-detail.hbs
@@ -23,7 +23,7 @@
   <div class="mdc-layout-grid__inner expand detail">
     <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4">
       {{#compare request.params.slug "===" "foundations"}}
-      <!-- <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Communicating).png" alt="Communicating illustration" class="responsive-img margin-top" /> -->
+      <img src="https://storage.googleapis.com/digital-participation-charter/Foundation.png" alt="Foundations illustration" class="responsive-img margin-top" />
       {{else}}
       {{#compare request.params.slug "===" "communicating"}}
       <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Communicating).png" alt="Communicating illustration" class="responsive-img margin-top" />
@@ -38,7 +38,7 @@
       <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Problem-Solving).png" alt="Problem Solving illustration" class="responsive-img margin-top" />
       {{else}}
       {{#compare request.params.slug "===" "safety"}}
-      <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Creating).png" alt="Creating illustration" class="responsive-img margin-top" />
+      <img src="https://storage.googleapis.com/digital-participation-charter/Safety.png" alt="Safety illustration" class="responsive-img margin-top" />
       {{else}}
       {{/compare}}
       {{/compare}}
