Direct link to event detail on SCVO

--- a/sites/configurations/goodmoves/partials/event/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/event/search-result.hbs
@@ -2,7 +2,7 @@
   <div class="mdc-card__info--event-row">
     <div class="mdc-card__info--event">
       <div class="mdc-card__info--event-title mdc-typography--headline6">
-        <a href="/training/{{slug}}">
+        <a href="https://scvo.org/events/{{slug}}">
           {{trim title}}
         </a>
       </div>
@@ -27,7 +27,7 @@
   </div>
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/training/{{slug}}" class="mdc-card__action">Find out more</a>
+      <a href="https://scvo.org/events/{{slug}}" class="mdc-card__action">Find out more</a>
     </div>
   </div>
 </div>
