map demo (hidden)

--- a/sites/configurations/scvo/templates/pages/page-map.hbs
+++ b/sites/configurations/scvo/templates/pages/page-map.hbs
@@ -1,4 +1,4 @@
-<div class="page jobs-landing">
+<!-- <div class="page jobs-landing">
   {{> header_splash}}
   <div class="container-fluid">
     {{> breadcrumbs}}
@@ -104,4 +104,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
