--- a/sites/configurations/goodmoves/templates/vacancies/notes.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/notes.hbs
@@ -17,7 +17,9 @@
 
   {{#compare @root.data.notes_vacancies.open.hits.total ">" 0}}
   {{#each @root.data.notes_vacancies.open.hits.hits ~}}
+  {{#compare (trim (getProperty @root.data.notes Id)) "!==" "" ~}}
   {{> vacancy_search_result _source}}
+  {{/compare ~}}
   {{/each ~}}
   <div class="foot">
     {{> pagination paging=@root.data.notes_vacancies.open.pagination}}
@@ -29,7 +31,9 @@
     Closed jobs
   </h2>
   {{#each @root.data.notes_vacancies.closed.hits.hits ~}}
+  {{#compare (trim (getProperty @root.data.notes Id)) "!==" "" ~}}
   {{> vacancy_search_result _source}}
+  {{/compare ~}}
   {{/each ~}}
   <div class="foot">
     {{> pagination paging=@root.data.notes_vacancies.closed.pagination}}
