Colours, links, menus

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1,10 +1,10 @@
 $mdc-theme-primary: #42842A;
-$mdc-theme-primary-light: #9cd986;
-$mdc-theme-primary-dark: #336621;
+$mdc-theme-primary-light: #679c54;
+$mdc-theme-primary-dark: #346921;
 
-$mdc-theme-complimentary: #A7D0AC;
-$mdc-theme-complimentary-light: #e4f1e6;
-$mdc-theme-complimentary-dark: #76b67e;
+$mdc-theme-complimentary: #d9e6d4;
+$mdc-theme-complimentary-light: #ecf2e9;
+$mdc-theme-complimentary-dark: #c6dabf;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
 $mdc-theme-secondary-light: #F5F5F5; // Gray 100
@@ -1566,7 +1566,7 @@ body {
         white-space: nowrap;
         vertical-align: baseline;
         border-radius: $unit;
-        background-color: $mdc-theme-primary-light !important;
+        background-color: $mdc-theme-complimentary-dark !important;
         color: black;
         position: relative;
         top: -2px;
@@ -2623,7 +2623,7 @@ background-color: #42842A;
     align-items: flex-start;
     z-index: 1;
     width: 320px;
-    min-height: 640px;
+    min-height: 680px;
     margin-right: $unit/2;
     margin-bottom: 0;
     padding-bottom: $unit;
