--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -148,11 +148,11 @@
           {{else}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             {{#compare @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.total ">" 0}}
-            <p>
+            <p class="h-padding">
               There are currently no open jobs in your shortlist. <a href="/shortlist">See closed jobs</a>.
             </p>
             {{else}}
-            <p>
+            <p class="h-padding">
               There are currently no jobs in your shortlist, if you shortlist a job it will appear here for easy reference.
             </p>
             {{/compare}}
