Show notes everywhere

--- a/sites/configurations/goodmoves/partials/vacancy/mini.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/mini.hbs
@@ -1,5 +1,6 @@
 <div class="mdc-card goodmoves-vacancy goodmoves-{{vacancy_status}} mini {{if top_job "top-job"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info}}
+  {{> vacancy_notes limit=140}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
