--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -2,11 +2,11 @@
   {{> vacancy_key_info}}
   <hr class="mdc-list-divider" />
   {{#if description_short ~}}
-  <div class="search-result-article__snippet mdc-typography--body1">
-    {{{description_short}}}
-  </div>
-  <hr class="mdc-list-divider" />
+    <div class="search-result-article__snippet mdc-typography--body1">
+      {{{description_short}}}
+    </div>
   {{/if}}
+  {{> vacancy_notes}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
