Notes page show full

--- a/sites/configurations/goodmoves/partials/vacancy/notes.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/notes.hbs
@@ -6,12 +6,16 @@
     </h4>
     <div class="mdc-typography--body1">
       {{#if limit ~}}
-      {{{truncate (getProperty @root.data.notes Id) limit}}}
-      {{#compare (length (getProperty @root.data.notes Id)) ">" limit ~}}
-      <a href="/vacancy/{{slug}}">Read more</a>
-      {{/compare ~}}
+        {{#compare @root.route.name "===" "notes" ~}}
+          {{{regexReplace (getProperty @root.data.notes Id) "(\r\n)|(\r|\n)" "gi" "<br />"}}}
+        {{else}}
+          {{{truncate (getProperty @root.data.notes Id) limit}}}
+          {{#compare (length (getProperty @root.data.notes Id)) ">" limit ~}}
+            <a href="/vacancy/{{slug}}">Read more</a>
+          {{/compare ~}}
+        {{/compare ~}}
       {{else}}
-      {{{regexReplace (getProperty @root.data.notes Id) "(\r\n)|(\r|\n)" "gi" "<br />"}}}
+        {{{regexReplace (getProperty @root.data.notes Id) "(\r\n)|(\r|\n)" "gi" "<br />"}}}
       {{/if ~}}
     </div>
   </div>
